# pea-fan

./: .gitignore  Cargo.toml  Dockerfile  README.md  a  channels  channels.txt  entrypoint.sh  flake.nix  pg-log.out  print-schema.py  result  run-lgtm.sh  unresolvable.json
server/: Cargo.toml  Dockerfile
server/.old/: Cargo.toml
server/.old/src/: args.rs  constants.rs
server/.sqlx/: query-1813782302a61793b3e08a6cd613994bf095b089755764514afcec2d4adcb3e8.json  query-23394fd5694770632f1d9568a5c49bec419a8bfbc1b30108482c077c71a3c9b4.json  query-2db93abd2269e1dd2a48ca6d75d9b9fec01959563101da2f92ccc4296753e75f.json  query-2dda28a7112b4bdbf1e9e422e5adec1806915a016031350c642ad853b83358e3.json  query-4ff83210761fa4234eb8560111cddf860452b3d4753d3778685ae1b03addc24a.json  query-5104d2b3833bd8d304e65dcc48e017a165a69a45b3018d0ee1b14769d4a1d812.json  query-58300b900cf3fc259263d3c76e7b2ce89d9e0d73c95bb2bb232bd5edfde0d01d.json  query-5dd8125ed29807cfe9642ddd58aa449d4d49ef401df7652fd4b47c13c2178af9.json  query-5e2c6d057cfcb2cb6219424a27c389499e1056a538e1bba3d470256a9136a8ac.json  query-608f71980ee3b2c0427b2f10280f03b3a8b544f0ad79dce0f0aad2cbe258ae9c.json  query-625cfa69218414f353b95645e95c2998af9e3c31690b9cc3f3dcebcc6fd7ea23.json  query-6bc172f7ab159aa91fdd1aec1f763dd5bf7e99f7363c69bd8f3f47f7ff0956e3.json  query-6fa491dade63df1ca3599578a73d58607f8d383fabdbfea7fe20423c11200fb5.json  query-746f34ed2309c4f97ac953f1fe8a28ab61a272e96142c2ad038e36b118d3b93c.json  query-79d05f565446f8734a2d81af658c6d8c93d9e5cd6e904b06261801bdd037c099.json  query-7ed4c0a73237da6098dbde1be9ed4037c95fcea894c2b63c9124be256551893d.json  query-992bb27ed61780d5c1ce6a10e9e8c203661422a2ecf1d6ad1f3b1184c1cf91f0.json  query-9ae0d12cd08af001631a434be02d026aed3eef9bde908bd262a4611126a72444.json  query-a3ad6becffec31eb67789ac9e090d83e1b528d953a6dc31467e3bd25715fe1ec.json  query-bbc16fd85752bf52ba43382a654396058c605523b85aec5ca5b6f2a0058416f2.json  query-bc25aa23fcb76862a0cb164b2dc1b63ab16032e3c1c1b3cc8b2bec8e3752453c.json  query-cd85b7ba95c3c0ce0f019ad1715ce1b7d4290cd1c61e8fcc05ff59e99f23881d.json  query-ce52cad8c2f40072f7f82feceb64da3fc905eaf3ce9788d63089e47413a7bd89.json  query-db4fe4f211aaa5a18a012a1d8f184ab30af251fdf1725277c4c07f8e182ccd76.json  query-e5756f87eecf901e584d964747695ca9db045b71c5ea118ff57e3eb0b273b8e3.json  query-e58d923f13d43d0f9d7b49395510d82e81ada9b1bf2a709223f9b84f20fa3cf5.json  query-e5fc5afe1c6a97b680a5ab0907b235bb23f0ba73922eaece17f31268b325df87.json  query-e65db890b1ab29932e7ce3f8e4995f1919ca6cbef41f66ccb94f8fc4e06bc9a8.json  query-ebb51de8a6d92782e7bada330ad1040d73ba1e3693e02b1d49d3bfa66af33fce.json  query-fc2b2112afa394f5ee55a281168f2b23576d6463d0178943f1b36b6738b71640.json  query-fe8425f9551327097097a98698ed5eabef605a283b66d15eb58b2a6a71d4cb0a.json
server/migrations/: 20260105050504_init.sql  20260208114900_score_event.sql  20260216081447_text_search.sql  20260301133934_alter_pg_trgm_threshold.sql  20260308130530_time_windows_channel.sql  20260308130537_time_windows_chatter.sql  20260312131743_admin_session.sql  20260314102245_score_event_trigger_fix.sql  20260318125740_populate_reply_table.sql
server/server-testable/: Cargo.toml
server/server-testable/src/: main.rs
server/src/: Cargo.toml  constants.rs  main.rs
server/src/.socket.old/: client.rs  core.rs  handler.rs  mod.rs  pool.rs
server/src/.sqlx/: query-3bb78ddbc073729af9fd79dfc2f8b0ea8bc9f0f7008b7ccfe6a93344ec1e77c5.json  query-608c29e501b9d001772f3010703887c184c39c93220f0055e5e3d40190801769.json  query-6858266af4189bcd3658457a1d40f981d52c3e00973b68f89bf23add97b6356c.json  query-8df2ad4ad26240f23f6468a5dec0f30a60849a680c8c9e873625e9e10e290233.json  query-919509b85f476eb5f54efbcd5d4caa71c02cda30399eee4de3da948456bdde70.json  query-b1fca24a4a87772409ee75f09c04f4a3f0b0d32e3a0a0fb7e6510e5a28889435.json  query-ba3c8af12b97da1b79ab5fc70d86462009fc90ebf99ba899c68e0e77db0d9141.json  query-ea92e1f433b6d8c147aaad658b6d299d95056ab3ecb573593b7417f65ddbf742.json
server/src/api/: extractors.rs  handler.rs  mod.rs  server.rs
server/src/database/: mod.rs  postgres.rs  redis.rs  redis_migrate.rs  schema.rs
server/src/db/: mod.rs  models.rs  models_old.rs  pg.rs  redis.rs  repositories_old.rs
server/src/irc/: bridge.rs  channels.rs  client.rs  commands.rs  connection.rs  error.rs  jitter.rs  mod.rs  parse.rs  rate_limit.rs  worker.rs
server/src/parser/: mod.rs  parser.rs
server/src/parsing/: commands.rs  lexer.rs  mod.rs  old-parser.rs  parser.rs
(+419 files in other folders)
