[package]
name = "piss-fan"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.39", features = ["derive"] }
futures-util = "0.3.31"
hex = "0.4.3"
rand = "0.9.1"
redis = "0.32.0"
reqwest = { version = "0.12.19", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
