[package]
name = "hookserver-2"
version = "0.1.2"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
chrono = "0.4.41"
futures = { version = "0.3.31", features = ["futures-executor"] }
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
redis = { version = "0.32.0", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.19", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-util = "0.7.15"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"

[dev-dependencies]
wiremock = "0.6.3"
ws-mock = "0.3.1"
