[package]
name = "pea-fan"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures = { version = "0.3.31", features = ["futures-executor"] }
futures-util = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
rand = "0.9.2"
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12.23", features = ["json"] }
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
wiremock = "0.6.4"
ws-mock = "0.3.2"
